@@ -37,22 +37,23 @@ EBUILD grsecurity-sources-4.9.67.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.68.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.72.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.73.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+EBUILD grsecurity-sources-4.9.74-r1.ebuild 2111 SHA256 17849c159347c01deaf59dac5a8e5c27a5f319258b167baa4405a9f1fd6b15a3 SHA512 2df1dbee61f95063d77e176a41ce16a381ff85dffc47a9ef75d6c5998a773575bc4d43663d4ece64448fb651102998a8186a83bfb8877a806146ec315f0a77a7 WHIRLPOOL b48cf053458868b58a8a727f78c170aa8b2026123af14e565241620325ff591dee1475bc10d4f23831357333776195620c818018effd279ecc351652786c4654
 EBUILD grsecurity-sources-4.9.74.ebuild 1175 SHA256 96095b58056793ece859721d01ebbec5b9a9e6c79e731d19ec2f4007cbf4e114 SHA512 f5ff0aa4896bfa80d6341f53ad8f2f037fd5c17805fb79b0a850e81a7e0bc1fbb20b8717fa91395308b8b0549d824023cd947750b1da4f3f5e71736dbfd4bfca WHIRLPOOL c8cd5f8fe7abf5854884570a1eb526075215e5e29b00fee6e182675d8911770e045dd150cc6baf855ad9fef3900909bcb3ff55b77e8765ec44518e167cb13ed7
-MISC ChangeLog 3676 SHA256 bb6ddd22ae2c216925ff40642b075c32c416289bac412941b20377fd8fa7c599 SHA512 f479ab77f02ae312102baed002f29d64a3331511ad2af28665d6b0f6da6df0df4ef79bb6c9f796d8f55b28b4c9d6d184959f26ac8397d8ac37b1e86b7f6bde33 WHIRLPOOL 013019e75965f98510d9cdf0593398953475805a7fe1cb021fab776d701efbb9b2dedccd4a66b35bd7b0f7977acebefada93ee282882707f9c38216ac68f4b62
+MISC ChangeLog 4081 SHA256 b7e722e06554840839bee8f56dc334805e26c761b3e40b20b9d0b7b104de7071 SHA512 8946dc0104d6b9ff21cdbb54f16433deef9cd2b46fcad93aeb076a10bf7774fd314166fa566e6d2b42279a0aae0c1eff18c48350d6f41624dbe40348c6fd7eab WHIRLPOOL 3529a03403a78491936b71952277da236798efe0d8658c19d31b253022736859a8cdfce0e7711f3f1b42096ada19dcdc8e2fdf04b882fb417ae849e65f7f8953
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlpOWfIACgkQunvTUHGU
-RZ/i/w//ZohnoZV4gzdtLs2+wZkbEktB4TAkW7r1GDp+CWkwA8nwGGjaPJVsA1Uv
-U+9/ji1hnPpDNed0r+VWXQfEbDlYG5l1qn6kOfJ6hfR7cok448m1goEvp0x3X3Z5
-+3zeMcl160JldDY541YnSY7gKskcs4WcHlRePE8fulJ67vV3wsUUX8q2Muzhsoz3
-zjAf3dEVTLETzImfNRclY63UgQrT1ZxdQHe9uq5TIa9tKyrkIVHniPmdJY+myIjD
-aaE4YKsN9aYza9HoRnT+k86tfIdHkk2VqiDBWHG7N31N0KVKcmzDBiwuOe1otRv/
-TQVCg+IFCDuhxUtOHSj/ntS2C8sFBbBFbfvPQ1wMv/57gcYgv5W6F4SLZFFBs74I
-2njoBj/fKunB10AylVXWozAKT0ShGZlJD69FFxw4PR61rQuyJ5l6JNSkQDC3d0/F
-+t2Ch18h5kmBHQfjLQQX9a6JL6Jv45+H9lcmfmctWyYw0QN64dk548utL084ldpJ
-09+ZvCzm+TxB9bPhOSmKQb3rc+8fQaamaaB5Rduet++4QGIIVVdavAtHYbm+P7+Q
-KpmKOaGeIyNA57hDEETkQDaSN5rMSL8kUSpOvhT3BMUYt0IL0bhlYIWoteCdoe0c
-AKIs//gdyxNgWn4KjIdgrfMPqar86FKb05H3rZQRXCABrBxQU+8=
-=SkxG
+iQIzBAEBCAAdFiEEs+ivyGAFpWNMk78Ul5M0vJGhZ0UFAlu92oIACgkQl5M0vJGh
+Z0V/Cg/+O1CpPiHwGmryZU4+yonv7bzL2S9QeYodVhN1iGzMeOiGxG4rs/ppd+yc
+FH/43avhJvCOCUlhEzUgq0xThonI2H1d2Uqs+3lhkHKrEVHluTBANEmSOKtdSHMM
+xWZZyPEvrbsDkTAABU04dmibBePK6eab8N7H+SXaZfaKmepsycVYRqbezZjatzRh
+GWaVv+QcVwVjNacW2NO3eSWOYda+o5tLRJacFAodJ5sZIiff01aIxDDQ2IqWnkMR
+AoGGqD/KA8WGX6flUSYaZsje/Uov8UK6sySeUZTgmd74qZ02iyMX+Y7+ZVSh6jpF
+AIpYSP4Wpya4beKT1/1qP9w/yAxp6ZzsMvY8QmOMBXeJLpxlRxgs0yL7bnCfNAza
+qOyxh6G4eIjzoMzpN3fqm16GS9Hv/wyPoW8wQVlXcDrC8g5QgDn6Kmd00xb1adu/
+f8npKcuPY2JvyXaVa0Es4+h8sdV5iMUHCk+wL20RtS46RVJkTzQRpfjcnWLatWja
+zDzyAOQDtcWjU7WCKPqYEBnw3XzR9LuOF5IC7BnQ3xqEsAHJhHhUmjEyGygf1AFn
+9kWpmDXqQpwihu3wFl+aESyf0N879BNIY/JW7iAw9pPhk1x4mP9dy1H3dJ+b++AV
+AuOPIMXjy9bdH+0wrjP00fSNOFiTqoFyX0Qp03HnYpD8OqWjjmE=
+=LrPl
 -----END PGP SIGNATURE-----
